--- a/kibana-deployment.yaml
+++ b/kibana-deployment.yaml
@@ -21,35 +21,38 @@ spec:
           type: RuntimeDefault
       containers:
         - name: kibana-logging
-          image: docker.elastic.co/kibana/kibana-oss:7.10.2
+          image: registry.cn-hangzhou.aliyuncs.com/feilong103/kibana-oss:7.10.2
           resources:
             # need more cpu upon initialization, therefore burstable class
             limits:
               cpu: 1000m
+              memory: 2Gi
             requests:
-              cpu: 100m
+              cpu: 1000m
+              memory: 2Gi
           env:
             - name: ELASTICSEARCH_HOSTS
               value: http://elasticsearch-logging:9200
             - name: SERVER_NAME
               value: kibana-logging
             - name: SERVER_BASEPATH
-              value: /api/v1/namespaces/logging/services/kibana-logging/proxy
+              value: "/kibana" 
             - name: SERVER_REWRITEBASEPATH
-              value: "false"
+              value: "true"
           ports:
             - containerPort: 5601
               name: ui
               protocol: TCP
           livenessProbe:
             httpGet:
-              path: /api/status
+              path: /kibana/api/status
               port: ui
             initialDelaySeconds: 5
             timeoutSeconds: 10
           readinessProbe:
             httpGet:
-              path: /api/status
+              path: /kibana/api/status
               port: ui
             initialDelaySeconds: 5
             timeoutSeconds: 10
+
